logs/ircutils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ircutils'...
Compiling './lib/python3.5/site-packages/ircutils/bot.py'...
***   File "./lib/python3.5/site-packages/ircutils/bot.py", line 61
    print "[{cmd}] s={src!r} t={tgt!r} p={params}".format(**kwds)
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ircutils/connection.py'...
***   File "./lib/python3.5/site-packages/ircutils/connection.py", line 140
    except ssl.SSLError, why:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ircutils/events.py'...
***   File "./lib/python3.5/site-packages/ircutils/events.py", line 167
    except StandardError, ex:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ircutils-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
